# sporty_duck_ai

./: .gitignore  ARCHITECTURE.md  PROJECT_RULES.md  README.md  main.py  pyproject.toml  test.py  test.txt
alembic/: env.py
alembic/versions/: 8dda7c3dcbb8_removed_chat_id_from_user.py  db773c6fc421_create_users.py  edfa9731ce98_added_default_value_for_id.py
api/: app.py
api/routers/: __init__.py  conversation.py  entry.py
app/orchestrators/: __init__.py  conversation_orchestrator.py
app/pipelines/: __init__.py  conversation_pipeline.py  conversation_pipline.py  onboarding_pipeline.py
app/schemas/api/: conversation.py  entry.py  help.py
app/schemas/common/: event.py
app/schemas/pipelines/: __init__.py  conversation.py  onboarding.py
app/services/: IdentityService.py  __init__.py  ai_service.py  context_service.py  conversation_service.py  entry_service.py  memory_service.py  tool_manager.py
core/: config.py  container.py  enums.py  provider.py
core/contracts/api/: __init__.py  conversation.py  entry.py
core/contracts/common/: __init__.py  user.py
core/contracts/conversation/: __init__.py  orchestrator_request.py  orchestrator_response.py  pipeline_in.py  pipeline_out.py
core/contracts/identity/: __init__.py  resolve_request.py  resolve_result.py
core/contracts/pipelines/: conversation.py  onboarding.py
core/contracts/repositories/: __init__.py  create_user_request.py  update_user_request.py  user_record.py
infrastructure/db/: session.py
telegram/: handlers.py
user_interfaces/telegram/: bot.py  handlers.py
(+14 files in other folders)
