[tool.poetry]
name = "ai-companion"
version = "0.1.0"
description = "AI Companion"
authors = ["Долинов Андрей"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

fastapi = "^0.116.0"
uvicorn = { extras = ["standard"], version = "^0.35.0" }

aiogram = "^3.22.0"

sqlalchemy = "^2.0.42"
alembic = "^1.16.4"
asyncpg = "^0.30.0"

redis = "^6.2.0"

qdrant-client = "^1.15.1"

google-genai = "^1.29.0"

pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"

python-dotenv = "^1.1.1"

apscheduler = "^3.11.0"

httpx = "^0.28.1"

loguru = "^0.7.3"

orjson = "^3.11.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.12.5"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"